pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-api
  namespace: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: python-api
        image: ahatem/devopshive:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: devopshive-entrypoint
  namespace: api
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
