ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: devopshive-entrypoint
            port:
              number: 80
